--- a/alembic.ini
+++ b/alembic.ini
@@ -35,7 +35,9 @@ script_location = alembic
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = driver://user:pass@localhost/dbname
+# This parameter is not used by this app. The database DSN can be changed by
+# editing config.ini.
+# sqlalchemy.url = driver://user:pass@localhost/dbname
 
 
 # Logging configuration
